--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -3,3 +3,10 @@ controllers:
         path: ../src/Controller/
         namespace: App\Controller
     type: attribute
+switch_locale:
+    path: /switch-locale/{locale}
+    controller: App\Controller\LocaleController::switchLocale
+    requirements:
+        locale: en|de
+
+
